# hjson-cpp-example

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
src/: config.h  main.cpp  main_widget.cpp  main_widget.h
